--- a/Lab_8/Internal/ViewController/MainVC.xib
+++ b/Lab_8/Internal/ViewController/MainVC.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MainVC">
@@ -11,9 +11,43 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SF7-Wv-Lev" userLabel="searchButton">
+                    <rect key="frame" x="45" y="116" width="230" height="30"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                    <state key="normal" title="Search">
+                        <color key="titleShadowColor" cocoaTouchSystemColor="darkTextColor"/>
+                    </state>
+                    <connections>
+                        <action selector="searchButtonTaped:" destination="-1" eventType="touchUpInside" id="KtA-MO-dZP"/>
+                    </connections>
+                </button>
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="I2t-hf-RAq" userLabel="textField">
+                    <rect key="frame" x="45" y="50" width="230" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="230" id="AYl-UT-qH4"/>
+                        <constraint firstAttribute="height" constant="30" id="SkM-lp-IYS"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits"/>
+                    <connections>
+                        <outlet property="delegate" destination="-1" id="q05-gg-WHr"/>
+                    </connections>
+                </textField>
+            </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstAttribute="centerX" secondItem="SF7-Wv-Lev" secondAttribute="centerX" id="C3R-8U-1L1"/>
+                <constraint firstItem="SF7-Wv-Lev" firstAttribute="top" secondItem="I2t-hf-RAq" secondAttribute="bottom" constant="36" id="khh-jh-hOa"/>
+                <constraint firstAttribute="centerX" secondItem="I2t-hf-RAq" secondAttribute="centerX" id="lqa-Qt-H3o"/>
+                <constraint firstItem="I2t-hf-RAq" firstAttribute="width" secondItem="SF7-Wv-Lev" secondAttribute="width" id="nxR-LD-1sm"/>
+                <constraint firstItem="I2t-hf-RAq" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="50" id="qra-rd-LVq"/>
+                <constraint firstItem="I2t-hf-RAq" firstAttribute="height" secondItem="SF7-Wv-Lev" secondAttribute="height" id="sVh-dh-eTG"/>
+            </constraints>
+            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
         </view>
     </objects>
 </document>
